--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_01.png" alt="imagens1">
+                        <img src="./imagens/card_01.png" alt="imagens1">
                     </div>
                     <p class="list-item__name">Seletores</p>
                 </li>
 
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_02.jpg" alt="imagens2">
+                        <img src="./imagens/card_02.jpg" alt="imagens2">
                     </div>
                     <p class="list-item__name">Posicionamento</p>
                 </li>
