--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
             
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_03.jpg" alt="imagens3">
+                        <img src="./imagens/card_03.jpg" alt="imagens3">
                     </div>
                     <p class="list-item__name">Fontes</p>
                 </li>
 
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_04.jpg" alt="imagens4">
+                        <img src="./imagens/card_04.jpg" alt="imagens4">
                     </div>
                     <p class="list-item__name">Flexbox</p>
                 </li>
 
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_05.jpg" alt="imagens5">
+                        <img src="./imagens/card_05.jpg" alt="imagens5">
                     </div>
                     <p class="list-item__name">CSS Grid </p>
                 </li>
 
                 <li class="list-item">
                     <div class="list-item__imagem">
-                        <img src="../imagens/card_01.png" alt="imagens6">
+                        <img src="./imagens/card_01.png" alt="imagens6">
                     </div>
                     <p class="list-item__name">Semântica</p>
                 </li>
